--- a/views/results/result.hbs
+++ b/views/results/result.hbs
@@ -1,12 +1,20 @@
-{{#each results}}
-<h1>Titulo: {{this.title}}</h1>
-<h2>Notas: {{this.notes}}</h2>
-<p>Custom1: {{this.custom1}}</p>
-<p>Custom2: {{this.custom2}}</p>
-<p>Custom3: {{this.custom3}}</p>
-<p>Custom4: {{this.custom4}}</p>
-<p>Custom5: {{this.custom5}}</p>
-<p>Misc1: {{this.misc1}}</p>
-<p>Misc2: {{this.misc2}}</p>
-<p>Misc3: {{this.misc3}}</p>
-{{/each}}
+<div class="background">
+  <ul uk-accordion>
+  {{#each results}}
+  <li>
+    <a class="uk-accordion-title" href="#">{{this.title}}</a>
+    <div class="uk-accordion-content elements">
+      <p>Notas: {{this.notes}}</p>
+      <p>Custom1: {{this.custom1}}</p>
+      <p>Custom2: {{this.custom2}}</p>
+      <p>Custom3: {{this.custom3}}</p>
+      <p>Custom4: {{this.custom4}}</p>
+      <p>Custom5: {{this.custom5}}</p>
+      <p>Misc1: {{this.misc1}}</p>
+      <p>Misc2: {{this.misc2}}</p>
+      <p>Misc3: {{this.misc3}}</p>
+    </div>
+  </li>
+  {{/each}}
+  </ul>
+</div>
