--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,8 +1,54 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-  color: #00B7FF;
+  text-decoration: none;
+  color: #355c57;
+}
+
+a:hover{
+  text-decoration: none;
+}
+
+.background{
+  background-color: #e8e8e8;
+  padding-top: 1em;
+  margin-top: -2em;
+}
+
+.logo{
+  width: 150px;
+}
+
+.justified{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.fullwidth{
+  width: 100%;
+}
+
+.centered{
+  display: flex;
+  justify-content: center;
+}
+
+.uk-accordion-title{
+  margin: 1em;
+  padding: 1em;
+  border: 1px solid #ababab;
+  background-color: white;
+  color: #355c57;
+}
+
+.elements{
+  margin: -1.2em 1.5em 0;
+  padding: 1em;
+  background-color: white;
+
 }
