--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,24 @@
-<h1>DB Algas</h1>
-<form action="/search" method="POST">
-  <p>Buscador:
-    <input type="text" name="search">
-  </p>
-  <input type="submit" value="Buscar">
-</form>
+<div class="centered">
+    <h4>Un buscador de  <b>algas</b> pensado para ficólogos y no tan ficólogos</h4>
+</div>
+<div class="uk-margin centered fullwidth">
+    <form action="/search" method="POST" class="uk-search uk-search-default">
+        <button type="submit" class="uk-search-icon-flip" uk-search-icon></button>
+        <input name="search" class="uk-search-input" type="search" placeholder="Aphanocapsa...">
+        <h5>Filtrar búsqueda por:</h5>
+        <div class="filtros">
+            <p>
+                Título:
+                <input type="checkbox" name="titleFilter">
+            </p>    
+            <p>
+                Autor:
+                <input type="checkbox" name="authorFilter">
+            </p>
+            <p>
+                
+            </p>
+        </div>
+    </form>
+</div>
+
