--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -52,3 +52,12 @@ a:hover{
   background-color: white;
 
 }
+
+.filtros{
+  display: flex;
+  margin: 20px;
+}
+
+.uk-search-default {
+  width: 300px;
+}
