--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,19 +5,21 @@
     <form action="/search" method="POST" class="uk-search uk-search-default">
         <button type="submit" class="uk-search-icon-flip" uk-search-icon></button>
         <input name="search" class="uk-search-input" type="search" placeholder="Aphanocapsa...">
+        <br>
         <h5>Filtrar búsqueda por:</h5>
         <div class="filtros">
-            <p>
-                Título:
-                <input type="checkbox" name="titleFilter">
-            </p>    
-            <p>
-                Autor:
-                <input type="checkbox" name="authorFilter">
-            </p>
-            <p>
-                
-            </p>
+
+            <label for="title">Título: </label>
+            <input id="title" type="checkbox" name="titleFilter">
+            &nbsp;
+
+            <label for="author">Autor: </label>
+            <input type="checkbox" id="author" name="authorFilter">
+            &nbsp;
+
+            <label for="topic">Tema: </label>
+            <input type="checkbox" id="topic" name="topicFilter">
+
         </div>
     </form>
 </div>
